--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${catkin_INCLUDE_DIRS})
 catkin_package()
 add_subdirectory(common)
 add_subdirectory(modules)
+add_subdirectory(rmsc)
