move rmsc_messages to an independent folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ find_package(Glog REQUIRED)
 find_package(ProtoBuf REQUIRED)
 
 add_subdirectory(modules/stream/messages)
-list(APPEND catkin_INCLUDE_DIRS ${msg_INCLUDE_DIRS})
+add_subdirectory(rmsc/rmsc_messages)
+list(APPEND catkin_INCLUDE_DIRS ${msg_INCLUDE_DIRS} ${rmsc_msg_INCLUDE_DIRS})
 message(STATUS ${catkin_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${catkin_INCLUDE_DIRS})
 catkin_package()
