--- a/modules/decision/CMakeLists.txt
+++ b/modules/decision/CMakeLists.txt
@@ -15,18 +15,18 @@ target_link_libraries(ICRA_decision_node
   ${catkin_LIBRARIES}
   )
 
-add_executable(RMSC_decision_node_v0
-  RMSC_decision_v0/decision_node.cpp
-  RMSC_decision_v0/goal_factory.h
-  RMSC_decision_v0/action_behavior.h
-  )
-target_link_libraries(RMSC_decision_node_v0
-  PRIVATE
-  common::log
-  behavior_tree
-  perception::map::costmap
-  ${catkin_LIBRARIES}
-  )
+# add_executable(RMSC_decision_node_v0
+#   RMSC_decision_v0/decision_node.cpp
+#   RMSC_decision_v0/goal_factory.h
+#   RMSC_decision_v0/action_behavior.h
+#   )
+# target_link_libraries(RMSC_decision_node_v0
+#   PRIVATE
+#   common::log
+#   behavior_tree
+#   perception::map::costmap
+#   ${catkin_LIBRARIES}
+#   )
 
 add_executable(test_decision_node
         test_decision/decision_node.cpp
