add aggressive gain buff action

--- a/rmsc/rmsc_messages/CMakeLists.txt
+++ b/rmsc/rmsc_messages/CMakeLists.txt
@@ -6,6 +6,7 @@ add_action_files(
   GetAmmo.action
   NavTo.action
   LookAndMove.action
+  AggressiveGainBuff.action
   ObstacleScan.action
 )
 
@@ -15,6 +16,7 @@ add_message_files(
   FILES
   GripperCmd.msg
   GripperInfo.msg
+  AggressiveGainBuffInfo.msg
   ConditionOverride.msg
   AmmoDetect.msg
 )
