--- a/rmsc/ammo_visual_detect/CMakeLists.txt
+++ b/rmsc/ammo_visual_detect/CMakeLists.txt
@@ -4,36 +4,27 @@ protobuf_generate_cpp(proto/arguments.pb.cc proto/arguments.pb.h proto/arguments
 
 include_directories(
   proto
-  action_msg
   ${Protobuf_INCLUDE_DIRS}  
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
 )
 
-add_library(${PROJECT_NAME}_proto
+add_library(ammo_visual_detect_proto
   SHARED
   proto/arguments.pb.cc 
   proto/arguments.pb.h
 )
 
-add_executable(${PROJECT_NAME}_node 
-  ammo_visual_detect_node.cpp 
-  proto/arguments.pb.cc
+add_executable(ammo_visual_detect_node 
+  mag_track_node.cpp 
+  proto/arguments.pb.cc .
   proto/arguments.pb.h)
 
-target_link_libraries(${PROJECT_NAME}_node
-  ${PROTOBUF_LIBRARIES}
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
+target_link_libraries(ammo_visual_detect_node
+    ${PROTOBUF_LIBRARIES}
+    ${catkin_LIBRARIES}
+    ${OpenCV_LIBRARIES}
 )
 
-# add_executable(${PROJECT_NAME}_client
-#   ammo_visual_detect_client.cpp
-# )
-
-# target_link_libraries(${PROJECT_NAME}_client
-#   PRIVATE
-#   ${catkin_LIBRARIES}
-# )
 
 
