--- a/rmsc/decision_v1/CMakeLists.txt
+++ b/rmsc/decision_v1/CMakeLists.txt
@@ -34,7 +34,7 @@ target_link_libraries(RMSC_behavior_tree
 # decision node
 
 add_executable(RMSC_decision_node_v1
-  ${CMAKE_CURRENT_SOURCE_DIR}/decision_node.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/decision_node_final.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/goal_factory.h
   ${CMAKE_CURRENT_SOURCE_DIR}/action_behavior.h
 )
@@ -47,16 +47,16 @@ target_link_libraries(RMSC_decision_node_v1
   ${catkin_LIBRARIES}
 )
 
-add_executable(RMSC_decision_node_v2
-  ${CMAKE_CURRENT_SOURCE_DIR}/decision_node_final.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/goal_factory.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/action_behavior.h
-)
+# add_executable(RMSC_decision_node_v2
+#   ${CMAKE_CURRENT_SOURCE_DIR}/decision_node_final.cpp
+#   ${CMAKE_CURRENT_SOURCE_DIR}/goal_factory.h
+#   ${CMAKE_CURRENT_SOURCE_DIR}/action_behavior.h
+# )
 
-target_link_libraries(RMSC_decision_node_v2
-  PRIVATE
-  common::log
-  RMSC_behavior_tree
-  perception::map::costmap
-  ${catkin_LIBRARIES}
-)
+# target_link_libraries(RMSC_decision_node_v2
+#   PRIVATE
+#   common::log
+#   RMSC_behavior_tree
+#   perception::map::costmap
+#   ${catkin_LIBRARIES}
+# )
