Fix UVC camera crash (Zheng Wang)

--- a/rmsc/ammo_visual_detect/CMakeLists.txt
+++ b/rmsc/ammo_visual_detect/CMakeLists.txt
@@ -3,6 +3,7 @@ project(ammo_visual_detect)
 protobuf_generate_cpp(proto/arguments.pb.cc proto/arguments.pb.h proto/arguments.proto)
 
 include_directories(
+  PRIVATE
   proto
   ${Protobuf_INCLUDE_DIRS}  
   ${catkin_INCLUDE_DIRS}
@@ -21,6 +22,13 @@ add_executable(ammo_visual_detect_node
   proto/arguments.pb.h)
 
 target_link_libraries(ammo_visual_detect_node
+    PRIVATE
+    driver::camera_param
+    detection::image_buffer
+    common::main_interface
+    common::log
+    common::io
+    common::rrts
     ${PROTOBUF_LIBRARIES}
     ${catkin_LIBRARIES}
     ${OpenCV_LIBRARIES}
